troisième commit (Réctification html)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h2>Filtres</h2>
                     <div class="filtre_eco"> <!--division filtre economique-->
                         <img class="money" src="Images/Icones/money-bill-wave-solid.svg" alt="">
-                        <h2 class="money">Economique</h2>
+                        <h2 class="money">&Eacute;conomique</h2>
                     </div>
                     <div class="filtre_fam"> <!--division filtre familial-->
                         <img class="child" src="Images/Icones/child-solid.svg" alt="">
@@ -58,12 +58,12 @@
                 </div>
             </section>
             <section id="section_2"> <!--section hebergements-->
-                <div class="hebergements"> <!--division hebergements-->
+                <div id="hebergements"> <!--division hebergements-->
                     <h1 class="hebergements">Hébergements a Marseille</h1>
                     <div class="cannebiere"> <!--division cannebiere-->
                         <img class="cannebiere" src="Images/Hébergements/large/auberge_cannebiere.jpg" alt="">
                         <h3 class="cannebiere">Auberge la Cannebière</h3>
-                        <p class="cannbiere">Nuit à partir de 25&euro;</p>
+                        <p class="cannebiere">Nuit à partir de 25&euro;</p>
 
                     </div>
                 </div>
