hosting division modifications

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <header> <!--page header-->
                 <img class="logo" src="Images/Logo/Reservia.svg" alt="Logo Reservia">  <!--reservia logo-->
                 <nav class="navigation">
-                    <h2 class="hosting_link"><a href="#hosting">Hébergements</a></h2> <!--hosting link-->
-                    <h2 class="activities_link"><a href="#activities">Activités</a></h2> <!--activities link-->
+                    <h2 class="hosting_link"><a href="#hosting">H&eacute;bergements</a></h2> <!--hosting link-->
+                    <h2 class="activities_link"><a href="#activities">Activit&eacute;s</a></h2> <!--activities link-->
                 </nav>
-                <h2 class="inscription">S'inscrire</h2> <!--inscription-->
+                <h2 class="inscription">S&apos;inscrire</h2> <!--inscription-->
             </header>
             <section id="section_1"> <!--menu section-->
-                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <h1>Trouvez votre h&eacute;bergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
                 <div class="search"> <!--search division--> 
                     <form class="search_field" method="POST" action="processing.php"> <!--entry field-->
@@ -50,7 +50,7 @@
                     </div>
                     <div class="pets_filter"> <!--pets filter division-->
                         <i class="fa fa-solid fa-dog"></i>
-                        <h2 class="dog">Animaux autorisés</h2>
+                        <h2 class="dog">Animaux autoris&eacute;s</h2>
                     </div>
                 </div>
                 <div class="info"> <!--information division-->
@@ -60,11 +60,38 @@
             </section>
             <section id="section_2"> <!--hosting section-->
                 <div id="hosting"> <!--hosting division-->
-                    <h1 class="hosting">Hébergements a Marseille</h1>
-                    <div class="cannebiere"> <!--cannebiere division-->
-                        <img class="cannebiere" src="Images/Hebergements/medium/auberge_cannebiere.jpg" alt="auberge de la cannebiere">
-                        <h3 class="cannebiere">Auberge la Cannebière</h3>
-                        <p class="cannebiere">Nuit à partir de 25&euro;</p>
+                    <h1 class="hosting">H&eacute;bergements a Marseille</h1>
+                    <div class="hosting_1"> <!--hosting_1 division-->
+                        <img class="hosting_1" src="Images/Hebergements/large/auberge_cannebiere.jpg" alt="auberge de la cannebiere">
+                        <h3 class="hosting_1">Auberge la Cannebi&egrave;re</h3>
+                        <p class="hosting_1">Nuit &agrave; partir de 25&euro;</p>
+                        <div class="stars_1">
+                            <span class="stars_1_1"><i class="fas fa-star"></i></span>
+                            <span class="stars_1_2"><i class="fas fa-star"></i></span>
+                            <span class="stars_1_3"><i class="fas fa-star"></i></span>
+                            <span class="stars_1_4"><i class="fas fa-star"></i></span>
+                            <span class="stars_1_5"><i class="fas fa-star"></i></span>
+                        </div>
+                    </div>
+                    <div class="hosting_2"> <!--hosting_2 division-->
+                        <img class="hosting_2" src="Images/Hebergements/large/hotel_port.jpg" alt="">
+                        <h3 class="hosting_2">H&ocirc;tel du port</h3>
+                        <p class="hosting_2">Nuit &agrave; partir de 52&euro;</p>
+                        <div class="stars_2">
+                            <span class="stars_2_1"><i class="fas fa-star"></i></span>
+                            <span class="stars_2_2"><i class="fas fa-star"></i></span>
+                            <span class="stars_2_3"><i class="fas fa-star"></i></span>
+                            <span class="stars_2_4"><i class="fas fa-star"></i></span>
+                            <span class="stars_2_5"><i class="fas fa-star"></i></span>
+                        </div>
+                    </div>
+                    <div class="hosting_3"> <!--hosting_3 division-->
+                        <img class="hosting_3" src="Images/Hebergements/large/hotel_mouette.jpg" alt="">
+                        <h3 class="hosting_3">H&ocirc;tel les Mouettes</h3>
+                        <p class="hosting_3">Nuit &agrave; partir de 76&euro;</p>
+                        <div class="stars_3">
+
+                        </div>
 
                     </div>
                 </div>
