stars_4 div rectification

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                             <span class="stars_4_3"><i class="fas fa-star"></i></span>
                             <span class="stars_4_4"><i class="fas fa-star"></i></span>
                             <span class="stars_4_5"><i class="fas fa-star"></i></span>
+                        </div>
                     </div>
                     <div class="hosting_5"> <!--hosting_5 division-->
                         <img class="hosting_5" src="Images/Hebergements/large/auberge_panier.jpg" alt="auberge le panier">
@@ -133,7 +134,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </section>
 
 
