--- a/index.html
+++ b/index.html
@@ -133,6 +133,54 @@
                             <span class="stars_6_5"><i class="fas fa-star"></i></span>
                         </div>
                     </div>
+                    <h2 class="hosting">Afficher plus</h2>
+                </div>
+                <div id="most_popular"> <!--most_popular division-->
+                    <h1 class="most_popular">Les Plus Populaires</h1>
+                    <span class="chart_line"><i class="fas fa-chart-line"></i></span>
+                    <div class="popular_1"> <!--most_popular_1_division-->
+                        <img class="popular_1" src="Images/Populaires/large/hotel_matin.jpg" alt="hotel le soleil du matin">
+                        <div class="popular_1_text">
+                            <h3 class="popular_1_text">H&ocirc;tel Le soleil du matin</h3>
+                            <p class="popular_1_text">Nuit &agrave; partir de 128&euro;</p>
+                            <div class="stars_popular_1">
+                                <span class="stars_popular_1_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_1_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_1_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_1_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_1_5"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="popular_2"> <!--most_popular_2_division-->
+                        <img class="popular_2" src="Images/Populaires/large/coeur_eau.jpg" alt="au coeur de l'eau chambres d'hotes">
+                        <div class="popular_2_text">
+                            <h3 class="popular_2_text">Au coeur de l&apos;eau Chambres D&apos;h&ocirc;tes</h3>
+                            <p class="popular_2_text">Nuit &agrave; partir de 71&euro;</p>
+                            <div class="stars_popular_2">
+                                <span class="stars_popular_2_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_2_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_2_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_2_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_2_5"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="popular_3"> <!--most_poupular_3_division-->
+                        <img class="popular_3" src="Images/Populaires/large/hotel_bleu_blanc.jpg" alt="hotel tout bleu et blanc">
+                        <div class="popular_3_text">
+                            <h3 class="popular_3_text">H&ocirc;tel Tout bleu et Blanc</h3>
+                            <p class="popular_3_text">Nuit &agrave; partir de 68&euro;</p>
+                            <div class="stars_popular_3">
+                                <span class="stars_popular_3_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_3_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_3_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_3_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_popular_3_5"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </section>
