adding two divisions line in hosting

--- a/index.html
+++ b/index.html
@@ -61,76 +61,80 @@
             <section id="section_2"> <!--hosting section-->
                 <div id="hosting"> <!--hosting division-->
                     <h1 class="hosting">H&eacute;bergements a Marseille</h1>
-                    <div class="hosting_1"> <!--hosting_1 division-->
-                        <img class="hosting_1" src="Images/Hebergements/large/auberge_cannebiere.jpg" alt="auberge de la cannebiere">
-                        <h3 class="hosting_1">Auberge la Cannebi&egrave;re</h3>
-                        <p class="hosting_1">Nuit &agrave; partir de 25&euro;</p>
-                        <div class="stars_1">
-                            <span class="stars_1_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_1_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_1_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_1_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_1_5"><i class="fas fa-star"></i></span>
+                    <div class="hosting_line_1"> <!--first_line_hosting_division-->
+                        <div class="hosting_1"> <!--hosting_1 division-->
+                            <img class="hosting_1" src="Images/Hebergements/large/auberge_cannebiere.jpg" alt="auberge de la cannebiere">
+                            <h3 class="hosting_1">Auberge la Cannebi&egrave;re</h3>
+                            <p class="hosting_1">Nuit &agrave; partir de 25&euro;</p>
+                            <div class="stars_1">
+                                <span class="stars_1_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_1_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_1_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_1_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_1_5"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                        <div class="hosting_2"> <!--hosting_2 division-->
+                            <img class="hosting_2" src="Images/Hebergements/large/hotel_port.jpg" alt="hotel du port">
+                            <h3 class="hosting_2">H&ocirc;tel du port</h3>
+                            <p class="hosting_2">Nuit &agrave; partir de 52&euro;</p>
+                            <div class="stars_2">
+                                <span class="stars_2_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_2_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_2_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_2_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_2_5"><i class="fas fa-star"></i></span>
+                            </div>
+                        </div>
+                        <div class="hosting_3"> <!--hosting_3 division-->
+                            <img class="hosting_3" src="Images/Hebergements/large/hotel_mouette.jpg" alt="hotel les mouettes">
+                            <h3 class="hosting_3">H&ocirc;tel Les Mouettes</h3>
+                            <p class="hosting_3">Nuit &agrave; partir de 76&euro;</p>
+                            <div class="stars_3">
+                                <span class="stars_3_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_3_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_3_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_3_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_3_5"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
                     </div>
-                    <div class="hosting_2"> <!--hosting_2 division-->
-                        <img class="hosting_2" src="Images/Hebergements/large/hotel_port.jpg" alt="hotel du port">
-                        <h3 class="hosting_2">H&ocirc;tel du port</h3>
-                        <p class="hosting_2">Nuit &agrave; partir de 52&euro;</p>
-                        <div class="stars_2">
-                            <span class="stars_2_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_2_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_2_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_2_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_2_5"><i class="fas fa-star"></i></span>
+                    <div class="hosting_line_2"> <!--second_line_hosting_division-->  
+                        <div class="hosting_4"> <!--hosting_4 division-->
+                            <img class="hosting_4" src="Images/Hebergements/large/hotel_mer.jpg" alt="hotel de le mer">
+                            <h3 class="hosting_4">H&ocirc;tel de la mer</h3>
+                            <p class="hosting_4">Nuit &agrave; partir de 46&euro;</p>
+                            <div class="stars_4">
+                                <span class="stars_4_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_4_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_4_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_4_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_4_5"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="hosting_3"> <!--hosting_3 division-->
-                        <img class="hosting_3" src="Images/Hebergements/large/hotel_mouette.jpg" alt="hotel les mouettes">
-                        <h3 class="hosting_3">H&ocirc;tel Les Mouettes</h3>
-                        <p class="hosting_3">Nuit &agrave; partir de 76&euro;</p>
-                        <div class="stars_3">
-                            <span class="stars_3_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_3_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_3_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_3_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_3_5"><i class="fas fa-star"></i></span>
+                        <div class="hosting_5"> <!--hosting_5 division-->
+                            <img class="hosting_5" src="Images/Hebergements/large/auberge_panier.jpg" alt="auberge le panier">
+                            <h3 class="hosting_5">Auberge Le Panier</h3>
+                            <p class="hosting_5">Nuit &agrave; partir de 23&euro;</p>
+                            <div class="stars_5">
+                                <span class="stars_5_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_5_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_5_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_5_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_5_5"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="hosting_4"> <!--hosting_4 division-->
-                        <img class="hosting_4" src="Images/Hebergements/large/hotel_mer.jpg" alt="hotel de le mer">
-                        <h3 class="hosting_4">H&ocirc;tel de la mer</h3>
-                        <p class="hosting_4">Nuit &agrave; partir de 46&euro;</p>
-                        <div class="stars_4">
-                            <span class="stars_4_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_4_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_4_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_4_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_4_5"><i class="fas fa-star"></i></span>
-                        </div>
-                    </div>
-                    <div class="hosting_5"> <!--hosting_5 division-->
-                        <img class="hosting_5" src="Images/Hebergements/large/auberge_panier.jpg" alt="auberge le panier">
-                        <h3 class="hosting_5">Auberge Le Panier</h3>
-                        <p class="hosting_5">Nuit &agrave; partir de 23&euro;</p>
-                        <div class="stars_5">
-                            <span class="stars_5_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_5_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_5_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_5_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_5_5"><i class="fas fa-star"></i></span>
-                        </div>
-                    </div>
-                    <div class="hosting_6"><!--hostin_6 division-->
-                        <img class="hosting_6" src="Images/Hebergements/large/hotel_amina.jpg" alt="hotel chez amina">
-                        <h3 class="hosting_6">H&ocirc;tel chez Amina</h3>
-                        <p class="hosting_6">Nuit &agrave; partir de 96&euro;</p>
-                        <div class="stars_6">
-                            <span class="stars_6_1"><i class="fas fa-star"></i></span>
-                            <span class="stars_6_2"><i class="fas fa-star"></i></span>
-                            <span class="stars_6_3"><i class="fas fa-star"></i></span>
-                            <span class="stars_6_4"><i class="fas fa-star"></i></span>
-                            <span class="stars_6_5"><i class="fas fa-star"></i></span>
+                        <div class="hosting_6"><!--hostin_6 division-->
+                            <img class="hosting_6" src="Images/Hebergements/large/hotel_amina.jpg" alt="hotel chez amina">
+                            <h3 class="hosting_6">H&ocirc;tel chez Amina</h3>
+                            <p class="hosting_6">Nuit &agrave; partir de 96&euro;</p>
+                            <div class="stars_6">
+                                <span class="stars_6_1"><i class="fas fa-star"></i></span>
+                                <span class="stars_6_2"><i class="fas fa-star"></i></span>
+                                <span class="stars_6_3"><i class="fas fa-star"></i></span>
+                                <span class="stars_6_4"><i class="fas fa-star"></i></span>
+                                <span class="stars_6_5"><i class="fas fa-star"></i></span>
+                            </div>
                         </div>
                     </div>
                     <h2 class="hosting">Afficher plus</h2>
@@ -180,9 +184,7 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             </section>
 
 
