activities section integration

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <h2 class="inscription">S&apos;inscrire</h2> <!--inscription-->
             </header>
             <section id="section_1"> <!--menu section-->
-                <h1>Trouvez votre h&eacute;bergement pour des vacances de rêve</h1>
-                <p>En plein centre ville ou en pleine nature</p>
+                <h1 class="section_1">Trouvez votre h&eacute;bergement pour des vacances de r&ecirc;ve</h1>
+                <p class="section_1">En plein centre ville ou en pleine nature</p>
                 <div class="search"> <!--search division--> 
                     <form class="search_field" method="POST" action="processing.php"> <!--entry field-->
                         <i class="fa fa-solid fa-location-dot"></i>
@@ -35,7 +35,7 @@
                     </form>
                 </div>
                 <div class="filters"> <!--filters division-->
-                    <h2>Filtres</h2>
+                    <h2 class="filters">Filtres</h2>
                     <div class="eco_filter"> <!--economic filter division-->
                         <i class="fa fa-solid fa-money-bill-wave"></i>
                         <h2 class="money">&Eacute;conomique</h2>
@@ -183,6 +183,37 @@
                                 <span class="stars_popular_3_5"><i class="fas fa-star"></i></span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="section_3"> <!--activities_section-->
+                <h1 class="section_3">Activit&eacute;s &agrave; Marseille</h1>
+                <div class="old_harbor"> <!--activities_1 division-->
+                    <img class="old_harbor" src="Images/Activites/large/vieux_port.jpg" alt="vieux port">
+                    <h3 class="old_harbor">Vieux Port</h3>
+                </div>
+                <div class="activities_vertical_1"> <!--vertical_1 division-->
+                    <div class="pomegues_fort"> <!--activities_2 division-->
+                        <img class="pomegues_fort" src="Images/Activites/large/fort_pomegues.jpg" alt="fort de pomegues">
+                        <h3 class="pomegues_fort">Fort de Pom&egrave;gues</h3>
+                    </div>
+                    <div class="frioul_island"> <!--activities_3 division-->
+                        <img class="frioul_island" src="Images/Activites/large/iles_frioul.jpg" alt="iles du frioul">
+                        <h3 class="frioul_island">&Icirc;les du Frioul</h3>
+                    </div>
+                </div>
+                <div class="calanques_national_park"> <!--activities_4 division-->
+                    <img class="calanques_national_park" src="Images/Activites/large/parc_national_calanques.jpg" alt="parc national des calanques">
+                    <h3 class="calanques_national_park">Parc National des Calanques</h3>
+                </div>
+                <div class="activities_vertical_2"> <!--vertical_2 division-->
+                    <div class="notre_dame"> <!--activities_5 division-->
+                        <img class="notre_dame" src="Images/Activites/large/notre_dame.jpg" alt="notre dame de la garde">
+                        <h3 class="notre_dame">Notre-Dame-de-la-Garde</h3>
+                    </div>
+                    <div class="longchamp_park"> <!--activities_6 division-->
+                        <img class="longchamp_park" src="Images/Activites/large/parc_longchamp.jpg" alt="parc longchamp">
+                        <h3 class="longchamp_park">Parc Longchamp</h3>
                     </div>
                 </div>
             </section>
