footer integration in index.html

--- a/index.html
+++ b/index.html
@@ -217,9 +217,24 @@
                     </div>
                 </div>
             </section>
-
-
+            <footer>
+                <div class="footer_1"> <!--first footer list-->
+                    <h2 class="footer_1_title">A propos</h2>
+                    <p class="footer_1_text_1">Fonctionnement du site</p>
+                    <p class="footer_1_text_2">Conditions g&eacute;n&eacute;rales de vente</p>
+                    <p class="footer_1_text_3">Donn&eacute;es et confidentialit&eacute;</p>
+                </div>
+                <div class="footer_2"> <!--second footer list-->
+                    <h2 class="footer_2_title">Nos h&eacute;bergements</h2>
+                    <p class="footer_2_text_1">Charte qualit&eacute;</p>
+                    <p class="footer_2_text_2">Soumettre votre h&ocirc;tel</p>
+                </div>
+                <div class="footer_3"> <!--third footer list-->
+                    <h2 class="footer_3_title">Assistance</h2>
+                    <p class="footer_3_text_1">Centre d&apos;aide</p>
+                    <p class="footer_3_text_2">Nous contacter</p>
+                </div>
+            </footer>
         </main>
     </body>
-
 </html>
