color and header formating in styles.css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <header> <!--page header-->
                 <img class="logo" src="Images/Logo/Reservia.svg" alt="Logo Reservia">  <!--reservia logo-->
                 <nav class="navigation">
-                    <h2 class="hosting_link"><a href="#hosting">H&eacute;bergements</a></h2> <!--hosting link-->
-                    <h2 class="activities_link"><a href="#activities">Activit&eacute;s</a></h2> <!--activities link-->
+                    <h2 class="hosting_link"><a class="hosting_link" href="#hosting">H&eacute;bergements</a></h2> <!--hosting link-->
+                    <h2 class="activities_link"><a class="activities_link" href="#activities">Activit&eacute;s</a></h2> <!--activities link-->
                 </nav>
                 <h2 class="inscription">S&apos;inscrire</h2> <!--inscription-->
             </header>
@@ -37,19 +37,19 @@
                 <div class="filters"> <!--filters division-->
                     <h2 class="filters">Filtres</h2>
                     <div class="eco_filter"> <!--economic filter division-->
-                        <i class="fa fa-solid fa-money-bill-wave"></i>
+                        <span class="filter_icons"><i class="fa fa-solid fa-money-bill-wave"></i></span>
                         <h2 class="money">&Eacute;conomique</h2>
                     </div>
                     <div class="fam_filter"> <!--family filter division-->
-                        <i class="fa fa-solid fa-child"></i>
+                        <span class="filter_icons"><i class="fa fa-solid fa-child"></i></span>
                         <h2 class="child">Familial</h2>
                     </div>
                     <div class="romantic_filter"> <!--romantic filter division-->
-                        <i class="fa fa-solid fa-heart"></i>
+                        <span class="filter_icons"><i class="fa fa-solid fa-heart"></i></span>
                         <h2 class="heart">Romantique</h2>
                     </div>
                     <div class="pets_filter"> <!--pets filter division-->
-                        <i class="fa fa-solid fa-dog"></i>
+                        <span class="filter_icons"><i class="fa fa-solid fa-dog"></i></span>
                         <h2 class="dog">Animaux autoris&eacute;s</h2>
                     </div>
                 </div>
