modifications on css and html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=375" />
@@ -60,7 +60,7 @@
             </section>
             <section id="section_2"> <!--hosting section-->
                 <div id="hosting"> <!--hosting division-->
-                    <h1 class="hosting">H&eacute;bergements a Marseille</h1>
+                    <h1 class="hosting">H&eacute;bergements à Marseille</h1>
                     <div class="hosting_line_1"> <!--first_line_hosting_division-->
                         <a href="">
                             <div class="hosting_1"> <!--hosting_1 division-->
