filters, info and hosting in css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="info"> <!--information division-->
-                    <i class="fa fa-regular fa-circle-info"></i>
+                    <i class="fas fa-info"></i>
                     <p class="information">Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
