--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     <h1 class="hosting_title">Hébergements à Marseille</h1>
                     <div class="hosting_line_1"> <!--first_line_hosting_division-->
                         <a class="card_link" href="#">
-                            <div class="hosting_1"> <!--hosting_1 division-->                               
+                            <div class="hosting_1"> <!--hosting_1 division-->
+                                <span class="hosting_1_img"></span>                               
                                 <h3 class="hosting_1_title">Auberge la Cannebière</h3>
                                 <p class="hosting_1_price">Nuit à partir de 25&euro;</p>
                                 <div class="stars_1">
@@ -76,7 +77,8 @@
                             </div>
                         </a>
                         <a class="card_link" href="#">   
-                            <div class="hosting_2"> <!--hosting_2 division-->                                
+                            <div class="hosting_2"> <!--hosting_2 division-->
+                                <span class="hosting_2_img"></span>                                
                                 <h3 class="hosting_2_title">Hôtel du port</h3>
                                 <p class="hosting_2_price">Nuit à partir de 52&euro;</p>
                                 <div class="stars_2">
@@ -89,7 +91,8 @@
                             </div>
                         </a>
                         <a class="card_link" href="#">
-                            <div class="hosting_3"> <!--hosting_3 division-->                                
+                            <div class="hosting_3"> <!--hosting_3 division-->
+                                <span class="hosting_3_img"></span>                                
                                 <h3 class="hosting_3_title">Hôtel Les Mouettes</h3>
                                 <p class="hosting_3_price">Nuit à partir de 76&euro;</p>
                                 <div class="stars_3">
@@ -104,7 +107,8 @@
                     </div>
                     <div class="hosting_line_2"> <!--second_line_hosting_division-->
                         <a class="card_link" href="#">
-                            <div class="hosting_4"> <!--hosting_4 division-->                                
+                            <div class="hosting_4"> <!--hosting_4 division-->
+                                <span class="hosting_4_img"></span>                                
                                 <h3 class="hosting_4_title">Hôtel de la mer</h3>
                                 <p class="hosting_4_price">Nuit à partir de 46&euro;</p>
                                 <div class="stars_4">
@@ -117,7 +121,8 @@
                             </div>
                         </a>  
                         <a class="card_link" href="#">  
-                            <div class="hosting_5"> <!--hosting_5 division-->                                
+                            <div class="hosting_5"> <!--hosting_5 division-->
+                                <span class="hosting_5_img"></span>                                
                                 <h3 class="hosting_5_title">Auberge Le Panier</h3>
                                 <p class="hosting_5_price">Nuit à partir de 23&euro;</p>
                                 <div class="stars_5">
@@ -130,7 +135,8 @@
                             </div>
                         </a>
                         <a class="card_link" href="#">    
-                            <div class="hosting_6"><!--hostin_6 division-->                                
+                            <div class="hosting_6"><!--hostin_6 division-->
+                                <span class="hosting_6_img"></span>                                
                                 <h3 class="hosting_6_title">Hôtel chez Amina</h3>
                                 <p class="hosting_6_price">Nuit à partir de 96&euro;</p>
                                 <div class="stars_6">
@@ -152,7 +158,8 @@
                     </div>
                     <div class="popular_cards">
                         <a class="card_link" href="#">
-                            <div class="popular_1"> <!--most_popular_1_division-->                               
+                            <div class="popular_1"> <!--most_popular_1_division-->
+                                <span class="popular_1_img"></span>                           
                                 <div class="popular_1_text">
                                     <h3 class="popular_1_title">Hôtel Le soleil du matin</h3>
                                     <p class="popular_1_price">Nuit à partir de 128&euro;</p>
@@ -167,7 +174,8 @@
                             </div>
                         </a>
                         <a class="card_link" href="#">
-                            <div class="popular_2"> <!--most_popular_2_division-->                              
+                            <div class="popular_2"> <!--most_popular_2_division-->
+                                <span class="popular_2_img"></span>                         
                                 <div class="popular_2_text">
                                     <h3 class="popular_2_title">Au coeur de l'eau Chambres D'hôtes</h3>
                                     <p class="popular_2_price">Nuit à partir de 71&euro;</p>
@@ -182,7 +190,8 @@
                             </div>
                         </a>
                         <a class="card_link" href="#">
-                            <div class="popular_3"> <!--most_poupular_3_division-->                             
+                            <div class="popular_3"> <!--most_poupular_3_division-->
+                                <span class="popular_3_img"></span>                       
                                 <div class="popular_3_text">
                                     <h3 class="popular_3_title">Hôtel Tout bleu et Blanc</h3>
                                     <p class="popular_3_price">Nuit à partir de 68&euro;</p>
@@ -205,34 +214,40 @@
                     <div class="activities_cards">
                         <a  class="card_link" href="#">
                             <div class="old_harbor"> <!--activities_1 division-->
+                                <span class="old_harbor_img"></span>
                                 <h3 class="old_harbor_title">Vieux Port</h3>
                             </div>
                         </a>
                         <div class="activities_vertical_1"> <!--vertical_1 division-->
                             <a class="card_link" href="#">
                                 <div class="pomegues_fort"> <!--activities_2 division-->
+                                    <span class="pomegues_fort_img"></span>
                                     <h3 class="pomegues_fort_title">Fort de Pomègues</h3>
                                 </div>
                             </a>
                             <a class="card_link" href="#">
                                 <div class="frioul_island"> <!--activities_3 division-->
+                                    <span class="frioul_island_img"></span>
                                     <h3 class="frioul_island_title">Îles du Frioul</h3>
                                 </div>
                             </a>
                         </div>
                         <a  class="card_link" href="#">
                             <div class="calanques_national_park"> <!--activities_4 division-->
+                                <span class="calanques_national_park_img"></span>
                                 <h3 class="calanques_national_park_title">Parc National des Calanques</h3>
                             </div>
                         </a>
                         <div class="activities_vertical_2"> <!--vertical_2 division-->
                             <a class="card_link" href="#">
                                 <div class="notre_dame"> <!--activities_5 division-->
+                                    <span class="notre_dame_img"></span>
                                     <h3 class="notre_dame_title">Notre-Dame-de-la-Garde</h3>
                                 </div>
                             </a>
                             <a class="card_link" href="#">
                                 <div class="longchamp_park"> <!--activities_6 division-->
+                                    <span class="longchamp_park_img"></span>
                                     <h3 class="longchamp_park_title">Parc Longchamp</h3>
                                 </div>
                             </a>
