responsive integration in css

--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
                 </div>
                 <div class="filters"> <!--filters division-->
                     <h2 class="filters_title">Filtres</h2>
-                    <div class="eco_filter"> <!--economic filter division-->
-                        <span class="filter_icons"><i class="fa fa-solid fa-money-bill-wave"></i></span>
-                        <h2 class="money">&Eacute;conomique</h2>
-                    </div>
-                    <div class="fam_filter"> <!--family filter division-->
-                        <span class="filter_icons"><i class="fa fa-solid fa-child"></i></span>
-                        <h2 class="child">Familial</h2>
-                    </div>
-                    <div class="romantic_filter"> <!--romantic filter division-->
-                        <span class="filter_icons"><i class="fa fa-solid fa-heart"></i></span>
-                        <h2 class="heart">Romantique</h2>
-                    </div>
-                    <div class="pets_filter"> <!--pets filter division-->
-                        <span class="filter_icons"><i class="fa fa-solid fa-dog"></i></span>
-                        <h2 class="dog">Animaux autorisés</h2>
+                    <div class="filters_icons_division">
+                        <div class="eco_filter"> <!--economic filter division-->
+                            <span class="filter_icons"><i class="fa fa-solid fa-money-bill-wave"></i></span>
+                            <h2 class="money">&Eacute;conomique</h2>
+                        </div>
+                        <div class="fam_filter"> <!--family filter division-->
+                            <span class="filter_icons"><i class="fa fa-solid fa-child"></i></span>
+                            <h2 class="child">Familial</h2>
+                        </div>
+                        <div class="romantic_filter"> <!--romantic filter division-->
+                            <span class="filter_icons"><i class="fa fa-solid fa-heart"></i></span>
+                            <h2 class="heart">Romantique</h2>
+                        </div>
+                        <div class="pets_filter"> <!--pets filter division-->
+                            <span class="filter_icons"><i class="fa fa-solid fa-dog"></i></span>
+                            <h2 class="dog">Animaux autorisés</h2>
+                        </div>
                     </div>
                 </div>
                 <div class="info"> <!--information division-->
